k8s_manifests/ingress/ingress_traefik.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  namespace: ingress-controllers
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn:  arn:aws:acm:us-east-2:021510583954:certificate/6f7ff065-7916-4d26-8ce6-0943af0ebd8d    
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing    
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/healthcheck-port: '9000'
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: >
      traefik.justpipeline.com,
      argo.justpipeline.com,
      www.justpipeline.com,
      justpipeline.com,
      pgadmin.justpipeline.com,
      awx.justpipeline.com,
      prometheus.justpipeline.com,
  labels:
    app: traefik
spec:  
  rules:     
    - http:
        paths:
          # HTTP to HTTPS redirect entry
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /* 
            backend:
              serviceName: helm-traefik
              servicePort: 443
